# agilerobot

./: CMakeLists.txt  CMakePresets.json  README.md  build_and_run.py  gcovr.cfg  main.cpp
Documents/: console_ouput.txt  console_outout2.txt  console_output3.txt  console_output4.txt  console_output5.txt  console_output6_ok.txt  console_output7_cli_ok.txt  output_console8.txt
header/: agileMotorControl.h
source/: agileMotorControl.cpp
test/: CMakeLists.txt  test_agileMotorControl.cpp  test_agileMotorControl_funcPtr.cpp
